--- a/templates/os_aggregate_storage.j2
+++ b/templates/os_aggregate_storage.j2
@@ -11,4 +11,7 @@
         maxage 60
         notifempty
         nocreate
+        postrotate
+            restart rsyslog 2>&1 || true
+        endscript
 }
