--- a/templates/logrotate.j2
+++ b/templates/logrotate.j2
@@ -10,7 +10,7 @@
 {% if rsyslog_client_log_rotate_scripts | length > 0 %}
 {% for script in rsyslog_client_log_rotate_scripts %}
         {{ script.name }}
-            {{ script.content }}
+            {{ script.content | default(rsyslog_client_reload) }}
         endscript
 {% endfor %}
 {% endif %}
