Fix remote logging template
Since the intent of the role is to stream only specified logs
updated the filter to match local7 facility which the role is setting
for the application logs with "$InputFileFacility local7" in
99-rsyslog.conf.j2 template.

Change-Id: I531652300440d12cb98ada9c6eac44e9d4ab731f

--- a/templates/remote-logging.j2
+++ b/templates/remote-logging.j2
@@ -11,10 +11,10 @@ $ActionQueueSaveOnShutdown on
 $ActionQueueType LinkedList
 $ActionResumeRetryCount 250
 {% if rsyslog_client_tcp_reception == true %}
-*.* @@{{ hostvars[server]['ansible_host'] }}:{{ rsyslog_client_tcp_port }};RFC3164fmt
+local7.* @@{{ hostvars[server]['ansible_host'] }}:{{ rsyslog_client_tcp_port }};RFC3164fmt
 {% endif %}
 {% if rsyslog_client_udp_reception == true %}
-*.* @{{ hostvars[server]['ansible_host'] }}:{{ rsyslog_client_udp_port }};RFC3164fmt
+local7.* @{{ hostvars[server]['ansible_host'] }}:{{ rsyslog_client_udp_port }};RFC3164fmt
 {% endif %}
 
 {% endfor %}
@@ -31,9 +31,9 @@ $ActionResumeRetryCount 250
 {{ target.template }}
 {% endif %}
 {% if target.proto == "udp" %}
-{% set action_sting = '*.* @' %}
+{% set action_sting = 'local7.* @' %}
 {% elif target.proto == "tcp" %}
-{% set action_sting = '*.* @@' %}
+{% set action_sting = 'local7.* @@' %}
 {% endif %}
 {% if target.action_options is defined %}
 {{ action_sting }}{{ target.hostname }}:{{ target.port }};{{ target.action_options }}
