Fix mutiple restart of rsyslog daemon
Added "sharedscripts" option to avoid multiple restart of rsyslogd.

Change-Id: Ide851397fe089e28792751b5e0bf7c994cef5139
(cherry picked from commit 73e79bcdd7f968d8c32a9e2faf918a5170816e69)

--- a/templates/logrotate.j2
+++ b/templates/logrotate.j2
@@ -8,6 +8,7 @@
 {% endfor %}
 {% endif %}
 {% if rsyslog_client_log_rotate_scripts | length > 0 %}
+        sharedscripts
 {% for script in rsyslog_client_log_rotate_scripts %}
         {{ script.name }}
             {{ script.content | default(rsyslog_client_reload) }}
