--- a/templates/99-rsyslog.conf.j2
+++ b/templates/99-rsyslog.conf.j2
@@ -1,7 +1,7 @@
 # {{ ansible_managed }}
 
 # Log files
-{% for log_file in rsyslog_client_all_log_files %}
+{% for log_file in rsyslog_client_all_log_files | sort %}
 $InputFileName {{ log_file }}
 $InputFileTag {{ log_file.split('.log')[0] | basename }}:
 $InputFileStateFile state-{{ log_file.split('.log')[0] | basename }}
