--- a/templates/rsyslog.conf.j2
+++ b/templates/rsyslog.conf.j2
@@ -24,13 +24,13 @@ $RepeatedMsgReduction on
 #
 # Set the default permissions for all log files.
 #
-$FileOwner syslog
-$FileGroup adm
+$FileOwner {{ rsyslog_logfile_user }}
+$FileGroup {{ rsyslog_logfile_group }}
 $FileCreateMode 0640
 $DirCreateMode 0755
 $Umask 0022
-$PrivDropToUser syslog
-$PrivDropToGroup syslog
+$PrivDropToUser {{ rsyslog_logfile_drop_user }}
+$PrivDropToGroup {{ rsyslog_logfile_drop_group }}
 
 #
 # Where to place spool and state files
